# Dwigatel

./: .gitignore  CMakeLists.txt
Engine/: CMakeLists.txt
Engine/include/: dwigatelMain.h
Engine/include/Dwigatel/: CoreSystems.h  Engine.h  GLFWSubSystem.h  IGame.h  IRenderer.h  ISubSystem.h  OpenGLRenderer.h  dwiEvent.h  dwiINI.h  dwiLog.h  dwiSave.h  dwiVec.h
Engine/src/: Engine.cpp  GLFWSubSystem.cpp  OpenGLRenderer.cpp  dwiEvent.cpp
FlappyJew/: CMakeLists.txt
FlappyJew/src/: FlappyJew.cpp  FlappyJew.h  main.cpp
